Updated documentation for the entire codebase.

--- a/html/redirect.html
+++ b/html/redirect.html
@@ -7,7 +7,7 @@
 <body>
 <script type="text/javascript">
 <!--
-var pages = ["theapp-m"];
+var pages = ["is_a_is_not.VoteClassifier-c", "trainer.Voter-c", "is_a_is_not-m", "trainer-m", "theapp-m"];
 var dottedName = get_anchor();
 if (dottedName) {
     var target = redirect_url(dottedName);
