--- a/html/toc-everything.html
+++ b/html/toc-everything.html
@@ -12,8 +12,13 @@
       alink="#204080">
 <h1 class="toc">Everything</h1>
 <hr />
-  <h2 class="toc">All Functions</h2>
-    <a target="mainFrame" href="theapp-module.html#analyseFile"
+  <h2 class="toc">All Classes</h2>
+    <a target="mainFrame" href="is_a_is_not.VoteClassifier-class.html"
+     >is_a_is_not.VoteClassifier</a><br />    <a target="mainFrame" href="trainer.Voter-class.html"
+     >trainer.Voter</a><br />  <h2 class="toc">All Functions</h2>
+    <a target="mainFrame" href="is_a_is_not-module.html#find_features"
+     >is_a_is_not.find_features</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#is_a_is_not"
+     >is_a_is_not.is_a_is_not</a><br />    <a target="mainFrame" href="theapp-module.html#analyseFile"
      >theapp.analyseFile</a><br />    <a target="mainFrame" href="theapp-module.html#check"
      >theapp.check</a><br />    <a target="mainFrame" href="theapp-module.html#chunk"
      >theapp.chunk</a><br />    <a target="mainFrame" href="theapp-module.html#main"
@@ -24,8 +29,32 @@
      >theapp.remove</a><br />    <a target="mainFrame" href="theapp-module.html#showHelp"
      >theapp.showHelp</a><br />    <a target="mainFrame" href="theapp-module.html#stem"
      >theapp.stem</a><br />    <a target="mainFrame" href="theapp-module.html#stopWords"
-     >theapp.stopWords</a><br />    <a target="mainFrame" href="theapp-module.html#wordTokenize"
-     >theapp.wordTokenize</a><br /><hr />
+     >theapp.stopWords</a><br />    <a target="mainFrame" href="theapp-module.html#test_is_a"
+     >theapp.test_is_a</a><br />    <a target="mainFrame" href="theapp-module.html#traverse"
+     >theapp.traverse</a><br />    <a target="mainFrame" href="theapp-module.html#wordTokenize"
+     >theapp.wordTokenize</a><br />    <a target="mainFrame" href="trainer-module.html#UrL2Text"
+     >trainer.UrL2Text</a><br />    <a target="mainFrame" href="trainer-module.html#check"
+     >trainer.check</a><br />    <a target="mainFrame" href="trainer-module.html#find_features"
+     >trainer.find_features</a><br />    <a target="mainFrame" href="trainer-module.html#main"
+     >trainer.main</a><br />    <a target="mainFrame" href="trainer-module.html#parseHTML"
+     >trainer.parseHTML</a><br />    <a target="mainFrame" href="trainer-module.html#processDocuments"
+     >trainer.processDocuments</a><br />    <a target="mainFrame" href="trainer-module.html#splitCorpus"
+     >trainer.splitCorpus</a><br />    <a target="mainFrame" href="trainer-module.html#trainCorpus"
+     >trainer.trainCorpus</a><br />  <h2 class="toc">All Variables</h2>
+    <a target="mainFrame" href="is_a_is_not-module.html#BernoulliNB_classifier"
+     >is_a_is_not.BernoulliNB_classifier</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#LinearSVC_classifier"
+     >is_a_is_not.LinearSVC_classifier</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#LogisticRegression_classifier"
+     >is_a_is_not.LogisticRegression_classifier</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#MNB_classifier"
+     >is_a_is_not.MNB_classifier</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#SGDC_classifier"
+     >is_a_is_not.SGDC_classifier</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#classifier"
+     >is_a_is_not.classifier</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#documents"
+     >is_a_is_not.documents</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#documents_f"
+     >is_a_is_not.documents_f</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#open_file"
+     >is_a_is_not.open_file</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#voted_classifier"
+     >is_a_is_not.voted_classifier</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#word_features"
+     >is_a_is_not.word_features</a><br />    <a target="mainFrame" href="is_a_is_not-module.html#word_features5k_f"
+     >is_a_is_not.word_features5k_f</a><br />    <a target="mainFrame" href="trainer-module.html#word_features"
+     >trainer.word_features</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
