--- a/html/toc.html
+++ b/html/toc.html
@@ -15,8 +15,10 @@
   <a target="moduleFrame" href="toc-everything.html">Everything</a>
   <br />
   <h2 class="toc">Modules</h2>
-    <a target="moduleFrame" href="toc-theapp-module.html"
-     onclick="setFrame('toc-theapp-module.html','theapp-module.html');"     >theapp</a><br /><hr />
+    <a target="moduleFrame" href="toc-is_a_is_not-module.html"
+     onclick="setFrame('toc-is_a_is_not-module.html','is_a_is_not-module.html');"     >is_a_is_not</a><br />    <a target="moduleFrame" href="toc-theapp-module.html"
+     onclick="setFrame('toc-theapp-module.html','theapp-module.html');"     >theapp</a><br />    <a target="moduleFrame" href="toc-trainer-module.html"
+     onclick="setFrame('toc-trainer-module.html','trainer-module.html');"     >trainer</a><br /><hr />
   <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
 
