--- a/html/class-tree.html
+++ b/html/class-tree.html
@@ -3,7 +3,7 @@
           "DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Module Hierarchy</title>
+  <title>Class Hierarchy</title>
   <link rel="stylesheet" href="epydoc.css" type="text/css" />
   <script type="text/javascript" src="epydoc.js"></script>
 </head>
@@ -40,7 +40,7 @@
     onclick="toggle_private();">hide&nbsp;private</a>]</span></td></tr>
         <tr><td align="right"><span class="options"
             >[<a href="frames.html" target="_top">frames</a
-            >]&nbsp;|&nbsp;<a href="module-tree.html"
+            >]&nbsp;|&nbsp;<a href="class-tree.html"
             target="_top">no&nbsp;frames</a>]</span></td></tr>
       </table>
     </td>
@@ -50,12 +50,12 @@
  [ <a href="module-tree.html">Module Hierarchy</a>
  | <a href="class-tree.html">Class Hierarchy</a> ]
 </b></center><br />
-<h1 class="epydoc">Module Hierarchy</h1>
+<h1 class="epydoc">Class Hierarchy</h1>
 <ul class="nomargin-top">
-    <li> <strong class="uidlink"><a href="is_a_is_not-module.html">is_a_is_not</a></strong>    </li>
-    <li> <strong class="uidlink"><a href="theapp-module.html">theapp</a></strong>: <em class="summary">Antonis Pishias, Alex Karavournarlis - University of Essex - 
-        Copyright 2015</em>    </li>
-    <li> <strong class="uidlink"><a href="trainer-module.html">trainer</a></strong>    </li>
+    <li> <strong class="uidlink">nltk.classify.ClassifierI</strong>
+    </li>
+    <li> <strong class="uidlink">nltk.classify.ClassifierI</strong>
+    </li>
 </ul>
 <!-- ==================== NAVIGATION BAR ==================== -->
 <table class="navbar" border="0" width="100%" cellpadding="0"
