--- a/html/toc-theapp-module.html
+++ b/html/toc-theapp-module.html
@@ -24,7 +24,9 @@
      >remove</a><br />    <a target="mainFrame" href="theapp-module.html#showHelp"
      >showHelp</a><br />    <a target="mainFrame" href="theapp-module.html#stem"
      >stem</a><br />    <a target="mainFrame" href="theapp-module.html#stopWords"
-     >stopWords</a><br />    <a target="mainFrame" href="theapp-module.html#wordTokenize"
+     >stopWords</a><br />    <a target="mainFrame" href="theapp-module.html#test_is_a"
+     >test_is_a</a><br />    <a target="mainFrame" href="theapp-module.html#traverse"
+     >traverse</a><br />    <a target="mainFrame" href="theapp-module.html#wordTokenize"
      >wordTokenize</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
